# passive

./: CHANGELOG.md  Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
src/: lib.rs  packed.rs
tests/: derive.rs
